# CocktailBerry-Payment

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile.api  Dockerfile.gui  README.md  alembic.ini  docker-compose.yaml  log_config.yaml  main.py  pyinstaller-API.spec  pyinstaller-GUI.spec  pyproject.toml  run_backend.py  run_frontend.py  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: code-check.yml  labels.yml  manual-docker-build.yml  manual-pyinstaller-build.yml  pr-labels.yml  release-build.yml
cocktailberry/: __main__.py  api.py  gui.py  setup.py
docs/: API.md
scripts/: cocktailberry-api.desktop  cocktailberry-gui.desktop  create_api.ps1  create_gui.ps1  helpers.py  unix_installer.sh  windows_installer.ps1
src/: shared.py
src/backend/: app.py  constants.py  main.py
src/backend/api/: app.py  balance.py  routes.py  users.py
src/backend/core/: config.py  errors.py  exception_handlers.py  middleware.py  nfc.py  nfc_manager.py
src/backend/db/: database.py
src/backend/db/migrations/: README.md  env.py
src/backend/db/migrations/versions/: f209444625a3_baseline_schema.py
src/backend/i18n/: translator.py
src/backend/i18n/translations/: de.yaml  en.yaml
src/backend/models/: schemas.py  types.py  user.py
src/backend/service/: user_service.py
src/frontend/: app.py  constants.py  main.py  services.py  store.py  theme.py
src/frontend/components/: __init__.py  amount_selector.py  nfc_scanner.py  nfc_search_bar.py
src/frontend/core/: config.py  nfc.py  payment_api.py
src/frontend/data/: api_client.py
src/frontend/i18n/: translator.py
src/frontend/i18n/translations/: de.yaml  en.yaml
src/frontend/models/: nfc.py
src/frontend/tabs/: config_tab.py  create_tab.py  history_tab.py  manage_tab.py  topup_tab.py
src/frontend/view/: components.py  manage.py  register.py  shared.py  topup.py
src/nicegui/: main.py  services.py  store.py  theme.py
src/nicegui/tabs/: create_tab.py  manage_tab.py  topup_tab.py
src/shared/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_user_service.py
tests/api/: test_error_mapping.py
tests/frontend/: test_payment_api.py  test_translation.py
tests/i18n/: test_translation.py
tests/service/: test_user_service.py
